--- a/web/src/main/angular/src/app/core/components/server-status/server-status-container.component.html
+++ b/web/src/main/angular/src/app/core/components/server-status/server-status-container.component.html
@@ -1,8 +1,18 @@
 <div class="l-status" *ngIf="hasServerList">
-    <button class="pinpoint-btn" [disabled]="enableRealTime" (click)="onClickViewServer()"><span><i class="fas fa-angle-{{spreadAngleIndicator}}" [hidden]="isLoading"></i><i class="fas fa-spinner fa-spin fa-fw" style="top:0px;left:-10px;" [hidden]="!isLoading"></i>VIEW SERVERS</span></button>
-    <button class="pinpoint-btn" (click)="onClickOpenInspector()" *ngIf="isWAS"><span><i class="fas fa-chart-line"></i><span>Inspector</span></span></button>
-    <ul class="l-status-count">
-        <li>Total <span class="l-total">{{node.instanceCount}}</span></li>
-        <li>Error <span class="l-error">{{node.instanceErrorCount || 0}}</span></li>
-    </ul>
+    <div class="l-status-up">
+        <button class="pinpoint-btn" [disabled]="enableRealTime" (click)="onClickViewServer()"><span><i class="fas fa-angle-{{spreadAngleIndicator}}" [hidden]="isLoading"></i><i class="fas fa-spinner fa-spin fa-fw" style="top:0px;left:-10px;" [hidden]="!isLoading"></i>VIEW SERVERS</span></button>
+        <button class="pinpoint-btn" (click)="onClickOpenInspector()" *ngIf="isWAS"><span><i class="fas fa-chart-line"></i><span>Inspector</span></span></button>
+        <ul class="l-status-count">
+            <li>Total <span class="l-total">{{node.instanceCount}}</span></li>
+            <li>Error <span class="l-error">{{node.instanceErrorCount || 0}}</span></li>
+        </ul>
+    </div>
+    <div class="l-status-filter">
+        <input class="l-search-input" type="text"
+            [(ngModel)]="filterKeyword"
+            placeholder="Filter API keyword"
+            (keydown.enter)="onFliterByAPIKeyword()"
+        >
+        <button class="l-search-button fas fa-filter" (click)="onFliterByAPIKeyword()"></button>
+    </div>
 </div>
