--- a/web/src/main/angular/src/app/core/components/server-status/server-status-container.component.html
+++ b/web/src/main/angular/src/app/core/components/server-status/server-status-container.component.html
@@ -11,8 +11,15 @@
         <input class="l-search-input" type="text"
             [(ngModel)]="filterKeyword"
             placeholder="Filter API keyword"
-            (keydown.enter)="onFliterByAPIKeyword()"
+            (keyup.enter)="onFilterByUrlParttern()"
         >
-        <button class="l-search-button fas fa-filter" (click)="onFliterByAPIKeyword()"></button>
+        <button *ngIf="filterKeyword !== ''"
+            class="l-clean-button fas fa-times-circle"
+            (click)="onCleanKeyword()">
+        </button>
+        <button class="l-search-button fas fa-filter"
+            (click)="onFilterByUrlParttern()">
+        </button>
+
     </div>
 </div>
