--- a/web/src/main/angular/src/app/core/components/server-status/server-status-container.component.css
+++ b/web/src/main/angular/src/app/core/components/server-status/server-status-container.component.css
@@ -60,7 +60,7 @@ button:first-child {
     margin-left: 10px;
 }
 .l-search-input {
-    width: 180px;
+    width: calc(100% - 20px);
     height: 28px;
     border: 1px solid #d7dde4;
     border-radius: 4px;
@@ -70,7 +70,7 @@ button:first-child {
 }
 .l-status-filter {
     position: relative;
-    width: 200px;
+    width: 90%;
 }
 .l-status-filter .l-search-button {
     position: absolute;
