--- a/web/src/main/angular/src/app/core/components/server-status/server-status-container.component.html
+++ b/web/src/main/angular/src/app/core/components/server-status/server-status-container.component.html
@@ -10,7 +10,7 @@
     <div class="l-status-filter">
         <input class="l-search-input" type="text"
             [(ngModel)]="filterKeyword"
-            placeholder="Filter API keyword"
+            placeholder="Filter API Url Pattern"
             (keyup.enter)="onFilterByUrlParttern()"
         >
         <button *ngIf="filterKeyword !== ''"
@@ -20,6 +20,5 @@
         <button class="l-search-button fas fa-filter"
             (click)="onFilterByUrlParttern()">
         </button>
-
     </div>
 </div>
