--- a/web/src/main/angular/src/app/core/components/server-status/server-status-container.component.css
+++ b/web/src/main/angular/src/app/core/components/server-status/server-status-container.component.css
@@ -4,7 +4,7 @@
 }
 .l-status {
     min-height: 80px;
-    padding: 8px 12px 8px 12px;
+    padding: 5px 10px 5px 10px;
 }
 .l-status:after {
     content:"";
@@ -59,34 +59,35 @@ button:first-child {
     float: none;
     margin-left: 10px;
 }
+
 .l-search-input {
-    width: calc(100% - 20px);
+    width: calc(100% - 30px);
     height: 28px;
     border: 1px solid #d7dde4;
     border-radius: 4px;
     padding: 0 28px 0 5px;
     background-color: #fff;
-    position: relative;
 }
 .l-status-filter {
     position: relative;
     width: 90%;
 }
 .l-status-filter .l-search-button {
-    position: absolute;
-    top: 50%;
-    right: -1px;
-    -webkit-transform: translateY(-50%);
-    transform: translateY(-50%);
     color: #a8acb5;
     font-size: 1.15em;
+    float: none;
+    top: 2px;
+    right: -3px;
+    position: relative;
 }
 .l-status-filter .l-clean-button {
     position: absolute;
-    top: 50%;
-    right: 24px;
-    -webkit-transform: translateY(-50%);
-    transform: translateY(-50%);
+    top: 5px;
+    right: 36px;
     color: #a8acb5;
     font-size: 1.15em;
+}
+.warnning-text {
+    font-size: 11px;
+    color: #ED4F32;
 }
